Rename order comment to description and stabilize query & lookup services