@@ -1,9 +1,7 @@
 package ch.devprojects.orderflow.service;
 
-import java.time.Instant;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
@@ -17,151 +15,122 @@ import ch.devprojects.orderflow.repository.OrderRepository;
 import jakarta.persistence.EntityNotFoundException;
 
 /**
- * OrderServiceImpl — business/service layer for Orders.
+ * Default implementation of OrderService.
  *
- * Responsibilities:
- * - Keeps controllers thin.
- * - Centralizes validation, defaults, timestamps, and mapping.
- * - Delegates persistence to OrderRepository.
- * - Uses OrderMapper for entity <-> DTO conversion.
+ * Key detail for this task: - persists and returns "description" (canonical)
+ * instead of old "comment"
+ *
+ * Important: - OrderDto accepts legacy JSON field "comment" via @JsonAlias in
+ * DTO, but we always persist into entity.description and DB column
+ * orders.description.
  */
 @Service
 @Transactional
 public class OrderServiceImpl implements OrderService {
 
-    private final OrderRepository orderRepository;
+	private final OrderRepository orderRepository;
+	private final OrderMapper orderMapper;
 
-    // Simple manual mapper; we keep it as a field so it can be reused.
-    private final OrderMapper orderMapper = new OrderMapper();
+	public OrderServiceImpl(OrderRepository orderRepository, OrderMapper orderMapper) {
+		this.orderRepository = Objects.requireNonNull(orderRepository, "orderRepository must not be null");
+		this.orderMapper = Objects.requireNonNull(orderMapper, "orderMapper must not be null");
+	}
 
-    public OrderServiceImpl(OrderRepository orderRepository) {
-        this.orderRepository = orderRepository;
-    }
+	@Override
+	public OrderDto create(OrderDto dto) {
+		validateForCreate(dto);
 
-    // -------------------------------
-    // CREATE
-    // -------------------------------
-    @Override
-    public OrderDto create(OrderDto dto) {
-        Objects.requireNonNull(dto, "OrderDto must not be null");
+		// Uses mapper method (now defined) and persists description.
+		Order entity = orderMapper.toEntityForCreate(dto);
+		Order saved = orderRepository.save(entity);
+		return orderMapper.toDto(saved);
+	}
 
-        // Minimal guard rails (Bean Validation on the DTO will also run in the controller)
-        if (dto.getCode() == null || dto.getCode().isBlank()) {
-            throw new IllegalArgumentException("code must not be blank");
-        }
-        if (dto.getTotal() == null) {
-            throw new IllegalArgumentException("total must not be null");
-        }
+	@Override
+	@Transactional(readOnly = true)
+	public OrderDto findById(Long id) {
+		Order entity = orderRepository.findById(id)
+				.orElseThrow(() -> new EntityNotFoundException("Order not found, id=" + id));
+		return orderMapper.toDto(entity);
+	}
 
-        Order entity = orderMapper.toEntity(dto);
+	@Override
+	@Transactional(readOnly = true)
+	public List<OrderDto> findAll() {
+		return orderRepository.findAll().stream().map(orderMapper::toDto).toList();
+	}
 
-        // Defaults: if status is not provided, use NEW
-        if (entity.getStatus() == null) {
-            entity.setStatus(OrderStatus.NEW);
-        }
+	@Override
+	public OrderDto update(Long id, OrderDto dto) {
+		validateForUpdate(dto);
 
-        // Initialize timestamps if missing
-        Instant now = Instant.now();
-        if (entity.getCreatedAt() == null) {
-            entity.setCreatedAt(now);
-        }
-        entity.setUpdatedAt(now);
+		Order existing = orderRepository.findById(id)
+				.orElseThrow(() -> new EntityNotFoundException("Order not found, id=" + id));
 
-        Order saved = orderRepository.save(entity);
-        return orderMapper.toDto(saved);
-    }
+		// Uses mapper method (now defined) and persists description.
+		orderMapper.applyToExistingEntityForUpdate(dto, existing);
 
-    // -------------------------------
-    // READ (by id)
-    // -------------------------------
-    @Override
-    @Transactional(readOnly = true)
-    public OrderDto findById(Long id) {
-        Order found = orderRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Order not found: " + id));
-        return orderMapper.toDto(found);
-    }
+		Order saved = orderRepository.save(existing);
+		return orderMapper.toDto(saved);
+	}
 
-    // -------------------------------
-    // READ (all)
-    // -------------------------------
-    @Override
-    @Transactional(readOnly = true)
-    public List<OrderDto> findAll() {
-        return orderRepository.findAll()
-                .stream()
-                .map(orderMapper::toDto)
-                .collect(Collectors.toList());
-    }
+	@Override
+	public void delete(Long id) {
+		if (!orderRepository.existsById(id)) {
+			throw new EntityNotFoundException("Order not found, id=" + id);
+		}
+		orderRepository.deleteById(id);
+	}
 
-    // -------------------------------
-    // UPDATE (partial, null-safe)
-    // -------------------------------
-    @Override
-    public OrderDto update(Long id, OrderDto dto) {
-        Objects.requireNonNull(dto, "OrderDto must not be null");
+	@Override
+	@Transactional(readOnly = true)
+	public List<OrderDto> search(String code, OrderStatus status) {
+		Specification<Order> spec = Specification.where(null);
 
-        Order existing = orderRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Order not found: " + id));
+		if (code != null && !code.trim().isEmpty()) {
+			String codeLike = "%" + code.trim().toLowerCase() + "%";
+			spec = spec.and((root, query, cb) -> cb.like(cb.lower(root.get("code")), codeLike));
+		}
 
-        // In-place update, ignoring nulls; updatedAt is set if something changed
-        orderMapper.updateEntityFromDto(dto, existing);
+		if (status != null) {
+			spec = spec.and((root, query, cb) -> cb.equal(root.get("status"), status));
+		}
 
-        // Ensure status is never null after update
-        if (existing.getStatus() == null) {
-            existing.setStatus(OrderStatus.NEW);
-        }
+		return orderRepository.findAll(spec).stream().map(orderMapper::toDto).toList();
+	}
 
-        Order saved = orderRepository.save(existing);
-        return orderMapper.toDto(saved);
-    }
+	@Override
+	@Transactional(readOnly = true)
+	public OrderDto findByCode(String code) {
+		if (code == null || code.trim().isEmpty()) {
+			throw new IllegalArgumentException("code must not be blank");
+		}
 
-    // -------------------------------
-    // DELETE
-    // -------------------------------
-    @Override
-    public void delete(Long id) {
-        if (!orderRepository.existsById(id)) {
-            throw new EntityNotFoundException("Order not found: " + id);
-        }
-        orderRepository.deleteById(id);
-    }
+		Order entity = orderRepository.findByCode(code.trim())
+				.orElseThrow(() -> new EntityNotFoundException("Order not found, code=" + code.trim()));
 
-    // -------------------------------
-    // SEARCH (by code + status)
-    // -------------------------------
-    @Override
-    @Transactional(readOnly = true)
-    public List<OrderDto> search(String code, OrderStatus status) {
-        // Start with a "true" specification (matches all).
-        Specification<Order> spec = OrderSpecifications.alwaysTrue();
+		return orderMapper.toDto(entity);
+	}
 
-        // Add filter by code (substring, case-insensitive) if provided.
-        if (code != null && !code.isBlank()) {
-            spec = spec.and(OrderSpecifications.codeContainsIgnoreCase(code));
-        }
+	private void validateForCreate(OrderDto dto) {
+		if (dto == null) {
+			throw new IllegalArgumentException("OrderDto must not be null");
+		}
+		if (dto.getCode() == null || dto.getCode().trim().isEmpty()) {
+			throw new IllegalArgumentException("code must not be blank");
+		}
+		if (dto.getTotal() == null) {
+			throw new IllegalArgumentException("total must not be null");
+		}
+		if (dto.getTotal().signum() <= 0) {
+			throw new IllegalArgumentException("total must be > 0");
+		}
+		// status may be null; mapper defaults it to NEW
+		// description is optional; no validation needed
+	}
 
-        // Add filter by status if provided.
-        if (status != null) {
-            spec = spec.and(OrderSpecifications.statusEquals(status));
-        }
-
-        return orderRepository.findAll(spec)
-                .stream()
-                .map(orderMapper::toDto)
-                .collect(Collectors.toList());
-    }
-    
-    @Override
-    @Transactional(readOnly = true)
-    public OrderDto findByCode(String code) {
-        if (code == null || code.isBlank()) {
-            throw new IllegalArgumentException("code must not be blank");
-        }
-
-        Order found = orderRepository.findByCodeIgnoreCase(code)
-                .orElseThrow(() -> new EntityNotFoundException("Order not found with code: " + code));
-
-        return orderMapper.toDto(found);
-    }
+	private void validateForUpdate(OrderDto dto) {
+		// For now, same validation as create.
+		validateForCreate(dto);
+	}
 }
